demo09-monitoring/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-grafana
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/name: grafana
    #app.kubernetes.io/component: server
  ports:
  - port: 90
    targetPort: 3000
    protocol: TCP
  type: NodePort
