demo09-monitoring/prometheus-svc-nlb.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-prometheus2
  namespace: monitoring
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: prometheus
  ports:
  - port: 80
    targetPort: 9090
    protocol: TCP
