demo09-monitoring/prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-prometheus
  namepsace: prometheus
spec:
  selector:
    app:prometheus
  ports:
  - port: 80
    targetPort: 9090
    protocol: TCP
  type: NodePort
