demo09-monitoring/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx1
spec:
  selector:
    app: nginx1
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort
