demo09-monitoring/prometheus-ingress-nlb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
    #annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        #- path: /prometheus
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: service-prometheus
            port:
              number: 80
